--- a/markdown/thyroid_cancer_prediction.Rmd
+++ b/markdown/thyroid_cancer_prediction.Rmd
@@ -202,3 +202,106 @@ dim(trainData)
 dim(testData)
 ```
 
+## Bootstrapping
+```{r Boot}
+# Set up bootstrapping
+set.seed(123)
+bootstrap_ctrl <- trainControl(method = "boot", number = 100) # 100 bootstrap resamples
+
+# Example: (We will reuse this when training models)
+model_boot <- train(Stage ~ ., data = trainData, method = "rf", trControl = bootstrap_ctrl)
+
+print(model_boot)
+```
+
+## Cross-validation
+```{r Cross-validation}
+# Set up 10-fold cross-validation
+set.seed(123)
+cv_ctrl <- trainControl(method = "cv", number = 10)  # 10-fold CV
+
+# Example: (we will reuse this for models)
+model_cv <- train(Stage ~ ., data = trainData, method = "rf", trControl = cv_ctrl)
+
+print(model_cv)
+```
+
+## Training Different Models
+```{r Training Different Models}
+# Load necessary libraries
+library(randomForest)
+library(caret)
+
+# Set random seed
+set.seed(123)
+
+# Train Random Forest
+rf_model <- train(Stage ~ ., 
+                  data = trainData,
+                  method = "rf",
+                  trControl = cv_ctrl)
+
+# Print results
+print(rf_model)
+
+# Load xgboost package
+library(xgboost)
+
+# Since xgboost expects numeric data, first ensure factors are properly encoded
+# (caret will internally handle this if using train())
+
+# Train XGBoost
+set.seed(123)
+xgb_model <- train(Stage ~ ., 
+                   data = trainData,
+                   method = "xgbTree",
+                   trControl = cv_ctrl)
+
+# Print results
+print(xgb_model)
+
+# Load nnet package for multinomial logistic regression
+library(nnet)
+
+# Train Multinomial Logistic Regression
+set.seed(123)
+multinom_model <- train(Stage ~ ., 
+                        data = trainData,
+                        method = "multinom",
+                        trControl = cv_ctrl,
+                        trace = FALSE)  # suppress output during training
+
+# Print results
+print(multinom_model)
+```
+
+## Performance Comparison using Resamples
+```{r performance}
+# Load required library
+library(caret)
+
+# Assume you have trained models already, like:
+# rf_model, svm_model, xgb_model
+
+# 1. Collect models into a list
+models_list <- list(
+  RandomForest = rf_model,
+  Multinom = multinom_model,
+  XGBoost = xgb_model
+)
+
+# 2. Compare model performance
+model_comparison <- resamples(models_list)
+
+# 3. Summary of results
+summary(model_comparison)
+
+# 4. Visualization of comparison
+bwplot(model_comparison, metric = "Accuracy")  # Boxplot of Accuracy
+dotplot(model_comparison, metric = "Accuracy") # Dotplot of Accuracy
+
+# You can also check Kappa scores if needed
+bwplot(model_comparison, metric = "Kappa")
+dotplot(model_comparison, metric = "Kappa")
+```
+
